--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
     width: 700px;
     border: 3px solid black;
 }
+.teachers{
+    display: flex;
+    width: 900px;
+    flex-wrap: wrap;
+}
 .teacher{
     border: 1px solid black;
     width: 200px;
